--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -18,12 +18,6 @@
         android:theme="@style/Theme.CPEN_321_M1"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-            android:name=".LoginServerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PhoneDetailsActivity"
-            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -39,6 +33,19 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC6zh-SDfnUsIo8uzBq2hLDnuPB4QtFjJw" />
 
+        <activity
+            android:name=".ShowRouteActivity"
+            android:exported="false"
+            android:label="@string/title_activity_show_route" />
+        <activity
+            android:name=".SearchBuildingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginServerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PhoneDetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".FavoriteCityActivity"
             android:exported="false"
